# goit-pythonweb-hw-04

./: README.md  ht04.py  pyproject.toml  requirements.txt
in/: Оруэлл Джордж. 1984 - royallib.ru.fb2  Это сочинение было сдано двумя студентами одного из.doc
in/Belyaev/: Belyaev_Anatomicheskiy_zhenih.104819.fb2  Belyaev_Belyiy_dikar.94886.fb2
in/Bradberry/: utopii-opasny-intervju-s-reem-bredberi.rtf
in/Harriot/: harriot1.txt  harriot2.txt  harriot3.txt
in/Kasparov/: Шахматы как модель жизни - Каспаров.docx
