[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ht04"
version = "0.1.0"
description = "Asynchronous file sorter by extension using aioshutil with retries, locked-file skipping, and exclude globs."
readme = "README.md"
requires-python = ">=3.12"
authors = [{name = "Your Name"}]
license = {text = "MIT"}
dependencies = ["aioshutil>=1.4"]

